--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    implementation("com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6")
 }
 
 tasks.named('test') {
